--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input id="input-field" type="text" class="form-control" placeholder="Enter a City"
                         aria-label="Recipient's username" aria-describedby="button-addon2">
                     <button onclick="cityName()" class="btn btn-outline-light bg-success" type="button"
-                        id="search-button">Button</button>
+                        id="search-button">Search</button>
                 </div>
             </div>
         </div>
